# DiagralHomekit

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: testing.yml
diagralhomekit/: __main__.py  alarm_system.py  config.py  diagral.py  diagral_config.py  homekit.py  homekit_alarm.py  homekit_config.py  main.py  meteofrance.py  plex.py  plugin.py  utils.py
diagralhomekit_tests/: __init__.py  constants.py  test_config.py
